# zk-proof-rust

./: Cargo.toml  README.md  SECURITY.md
src/: bitcoin.rs  circuit.rs  lib.rs  proof.rs  proofs.rs  transaction.rs  utils.rs
src/crates/: Cargo.toml  circuit.rs  cli.rs  electrum.rs  lightning.rs  proofs.rs  transaction.rs  utils.rs
src/creates/: proofs.rs
src/proofs/: mod.rs
src/tests/: test.rs
src/transaction/: mod.rs
src/utils/: mod.rs
zk_coinjoin_lib/: Cargo.toml
zk_coinjoin_lib/src/: lib.rs  proof.rs  transaction.rs  utils.rs
