[package]
name = "zk_coinjoin_lib"
version = "1.0.0-beta"
edition = "2021"
description = "ZK Proof library for Coinjoin"
homepage = "https://www.arealayer.net/projects"
repository = "https://github.com/arealayer/zk_coinjoin_lib"
license = "MIT"

[dependencies]
bellman = "0.14"
rand = "0.8"     
bitcoin = "0.32.5"
reqwest = "0.12.12"
pairing = "0.23.0"
serde =  { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
rustls = "0.23.20"
idna = "1.0.0"
bdk_electrum = "0.20.1"
lightning = "=0.1.0""