[package]
name = "zk_coinjoin_lib"
version = "1.0.3-beta"
edition = "2021"
description = "ZK Proof library for Coinjoin"
homepage = "https://www.arealayer.net/projects"
repository = "https://github.com/AreaLayer/zk-proof-rust"
documentation = "https://docs.rs/zk_coinjoin_lib"
license = "MIT"

[dependencies]
bellman = "0.14"
rand = "0.9"     
bitcoin = "0.32.6"
reqwest = "0.12.12"
pairing = "0.23.0"
serde =  { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
rustls = "0.23.20"
idna = "1.0.0"
bdk_electrum = "0.22.0"
lightning = "=0.1.4"
elements = "0.25.1"