[package]
name = "crates"
version = "1.0.0"
edition = "2021"

[dependencies]
bellman = "0.14"
rand = "0.9"     
bitcoin = "0.32.3"
reqwest = "0.12.7"
pairing = "0.23.0"
serde =  { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.128"
elements = "0.26.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
